Kubernetes/13_istio/samples/bookinfo/platform/kube/virtual-service-reviews-80-20.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
    - reviews
  http:
  - route:
    - destination:
        host: reviews
        subset: v1
      weight: 0
    - destination:
        host: reviews
        subset: v2
      weight: 75
    - destination:
        host: reviews
        subset: v3
      weight: 25
